--- a/caro/public/index.html
+++ b/caro/public/index.html
@@ -53,3 +53,28 @@
                 </div>
             </div>
         </div>
+
+        <!-- Create Room Modal -->
+        <div id="createRoomModal" class="modal">
+            <div class="modal-content">
+                <h2>Tạo phòng mới</h2>
+                <input type="text" id="createPlayerNameInput" placeholder="Nhập tên của bạn" maxlength="20">
+                <div class="modal-buttons">
+                    <button id="confirmCreateRoom" class="btn btn-primary">Tạo phòng</button>
+                    <button id="cancelCreateRoom" class="btn btn-secondary">Hủy</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Join Room Modal -->
+        <div id="joinRoomModal" class="modal">
+            <div class="modal-content">
+                <h2>Tham gia phòng</h2>
+                <input type="text" id="joinPlayerNameInput" placeholder="Nhập tên của bạn" maxlength="20">
+                <input type="text" id="joinRoomIdInput" placeholder="Nhập mã phòng" maxlength="10">
+                <div class="modal-buttons">
+                    <button id="confirmJoinRoom" class="btn btn-primary">Tham gia</button>
+                    <button id="cancelJoinRoom" class="btn btn-secondary">Hủy</button>
+                </div>
+            </div>
+        </div>
