--- a/caro/public/index.html
+++ b/caro/public/index.html
@@ -78,3 +78,24 @@
                 </div>
             </div>
         </div>
+
+        <!-- Game Over Modal -->
+        <div id="gameOverModal" class="modal">
+            <div class="modal-content">
+                <h2 id="gameOverTitle">Game kết thúc!</h2>
+                <p id="gameOverMessage"></p>
+                <div class="modal-buttons">
+                    <button id="playAgain" class="btn btn-primary">Chơi lại</button>
+                    <button id="closeGameOver" class="btn btn-secondary">Đóng</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
+
+
+
